<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- login strings -->

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="dang_nhap_voi_gmail">Đăng nhập với Gmail</string>
    <string name="Dang_Ky">Đăng Ký</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="quan_ly_nha_tro">Quản Lý Nhà Trọ</string>
    <string name="dang_nhap_de_tiep_tuc">Đăng Nhập để tiếp tục</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="quan_ly_phong_tro">Quản Lý Phòng Trọ</string>
    <string name="dang_nhap_bang_gmail">Đăng nhập bằng Gmail</string>
    <string name="app_name">HOMEMATE</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="quen_mat_khau">
            <u> Quên mật khẩu ? </u>
        </string>
    <string name="logout">Logout</string>
    <string name="this_is_main_activity">This is main activity</string>
    <string name="thay_doi_ho_so">Thay đổi hồ sơ</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="ten">Tên</string>
    <string name="che_do_ban_dem">Chế độ ban đêm</string>
    <string name="bat_thong_bao">Bật thông báo</string>
    <string name="gui_mail_ho_tro">Gửi mail hỗ trợ</string>
    <string name="ho_tro">Hỗ trợ</string>
    <string name="thay_doi_thong_tin">Thay đổi thông tin</string>
    <string name="ve_chung_toi">Về chúng tôi</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="them_moi_nha_tro">Thêm mới nhà trọ</string>
    <string name="lui_ve">Lui ve</string>
    <string name="sao">*</string>

    <!--    Thêm mới trọ-->
    <string-array name="motels">
        <item>Nhà trọ</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="huong_dan">Hướng dẫn</string>
    <string name="DOI_MAT_KHAU">ĐỔI MẬT KHẨU</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="mat_khau_cu">Mật khẩu cũ</string>
    <string name="nhap_lai_mat_khau_moi">Nhập lại mật khẩu mới</string>
    <string name="mat_khau_hien_tai">Mật khẩu hiện tại</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="Sdt">0xxx-xxx-xxx</string>
    <string name="thay_doi_mat_khau">Thay đổi mật khẩu</string>
    <string name="nut_quay_ve">Nút quay về</string>
    <string name="khung_avatar">Khung avatar</string>
    <string name="moon">Hình trăng</string>
    <string name="bell">Chuông thông báo</string>
    <string name="Gmail">Gmail</string>
    <string name="ask">Hỏi</string>
    <string name="information">Thông tin</string>
    <string name="sdt">0xxx-xxx-xxx</string>
    <string name="hoso_canhan">Hồ Sơ\nCá Nhân</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="ten_day_du">Tên đầy đủ</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="luu_thay_doi">Lưu thay đổi</string>
    <string name="them_anh">Thêm ảnh</string>
    <string name="DOI_MAT_KHAU_GACH_CHAN"><u>ĐỔI MẬT KHẨU</u></string>
    <string name="QUEN_MAT_KHAU">Quên Mật Khẩu?</string>
    <string name="dat_lai_mat_khau">Đặt lại mật khẩu</string>
    <string name="text_xac_nhan">Chúng tôi sẽ xác nhận quên mật khẩu thông qua email của bạn</string>
    <string name="XAC_THUC">XÁC THỰC</string>
    <string name="nhap_ma_otp_duoc_gui_ve_may">Nhập mã OTP được gửi về máy</string>
    <string name="XAC_THUC_OTP">XÁC THỰC OTP</string>
    <string name="Khong_nhan_duoc_otp">Không nhận được OTP?</string>
    <string name="GUI_LAI_OTP">GỬI LẠI OTP</string>
    <string name="XAC_NHAN">XÁC NHẬN</string>
    <string name="Khong_nhan_duoc_ma">Không nhận được mã ?</string>
    <string name="GUI_LAI_MA">GỬI LẠI MÃ</string>
    <string name="nhap_ma_xac_nhan_gui_qua_mail">Nhập mã xác nhận đã được gửi qua gmail</string>
    <string name="tieu_de">Quản Lí \nNhà Trọ</string>
    <string name="xac_nhan_qua_mail">Chúng tôi sẽ xác nhận quên mật khẩu thông qua email của bạn</string>
    <string name="dat_lai_mat_khau_moi">Đặt lại mật khẩu mới</string>
    <string name="Ma_xac_nhan">Mã xác nhận tài khoản</string>
    <string name="phong">Phòng</string>
    <string name="menu">Menu</string>
    <string name="phong_tro">Phòng trọ</string>
    <string name="thong_ke">Thống kê</string>
    <string name="chi_so">Chỉ số</string>
    <string name="dich_vu">Dịch vụ</string>
    <string name="nha_tro">Nhà trọ</string>
    <string name="thong_bao">Thông báo</string>
    <string name="them_nha_tro">Thêm Nhà trọ</string>
    <string name="huy">Huỷ</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="ban_co_muon_xoa_nha_tro">Bạn có muốn xoá nhà trọ</string>
    <string name="xac_nhan_xoa">Xác nhận xoá</string>
    <string name="chinh_sua">Chỉnh sửa</string>
    <string name="xoa_phong">Xoá phòng</string>
    <string name="so_phong">Số phòng :</string>
    <string name="so_phong_trong">Số phòng trống :</string>
    <string name="zero">0</string>
    <string name="doanh_thu_thang">Doanh thu tháng :</string>
    <string name="so_phong_no_tien">Số phòng trễ thanh toán :</string>
    <string name="stt">1</string>
    <string name="hoang_minh_thao">Hoàng Minh Thảo</string>
    <string name="title">Title</string>
    <string name="quen_mat_khau_gach_chan"><u>Quên mật khẩu?</u></string>
    <string name="dang_nhap_voi">Đăng nhập với</string>
    <string name="Chua_co_tai_khoan">Chưa có tài khoản?</string>
    <string name="Dang_ky">Đăng ký</string>
    <string name="Welcome_Back">Welcome Back</string>
    <string name="DANG_NHAP">ĐĂNG NHẬP</string>
    <string name="google_icon">Google Icon</string>
    <string name="khung_tren">khung trên</string>
    <string name="khung_tim_kiem">Khung tìm kiếm</string>
    <string name="anh_them_phong">Ảnh thêm phòng</string>
    <string name="khong_co_du_lieu">Không có dữ liệu !</string>
    <string name="Sap_xep">Sắp xếp</string>
    <string name="Loc">Lọc</string>
    <string name="tim_kiem_nha_tro">Tìm kiếm nhà trọ</string>
    <string name="da_thanh_toan">Đã thanh toán</string>
    <string name="cho_thanh_toan">Chờ thanh toán</string>
    <string name="qua_han_thanh_toan">Quá hạn thanh toán</string>
    <string name="khong_co_nguoi_thue">Không có người thuê</string>
    <string name="bo_loc">Bộ lọc</string>
    <string name="ap_dung">Áp dụng</string>
    <string name="so_luong_nguoi_dang_o">Số lượng người đang ở</string>
    <string name="gia_thue_phong">Giá thuê phòng</string>
    <string name="khach">Khách</string>
    <string name="hoa_don">Hóa đơn</string>
    <string name="hop_dong">Hợp đồng</string>
    <string name="tong_so_thanh_vien">Tổng số thành viên:</string>
    <string name="ho_ten">Họ tên</string>
    <string name="cccd_cmnd">Số CCCD/CMND</string>
    <string name="ngay_sinh">Ngày sinh</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="ngay_tao">Ngày tạo</string>
    <string name="gia_phong">Giá phòng</string>
    <string name="d_thang">đ/tháng</string>
    <string name="ngay_het_han_hop_dong">Ngày hết hạn hợp đồng</string>
    <string name="ngay_tra_tien_phong">Ngày trả tiền phòng</string>
    <string name="han_thanh_toan">Hạn thanh toán:</string>
    <string name="ngay">Ngày</string>
    <string name="anh_mat_truoc_cccd">Ảnh mặt trước CCCD</string>
    <string name="anh_mat_sau_cccd">Ảnh mặt sau CCCD</string>
    <string name="mat_truoc_hop_dong">Mặt trước hợp đồng</string>
    <string name="mat_sau_hop_dong">Mặt sau hợp đồng</string>
    <string name="dd_mm_yyyy">DD/mm/YYYY</string>
    <string name="ngay_vao_o">Ngày vào ở</string>
    <string name="ten_khach_thue">Tên khách thuê</string>
    <string name="them_khach">Thêm khách</string>

    <string-array name="gender_options">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>

    <string name="ban_co_muon_xoa_phong_tro">Bạn có muốn xóa phòng trọ</string>
    <string name="ban_xoa_phong_tro_thanh_cong">Bạn đã xoá phòng trọ thành công!</string>
    <string name="ban_co_muon_luu_hop_dong_khong">Bạn có muốn lưu hợp đồng không?</string>
    <string name="luu">Lưu</string>
    <string name="ngay_vao_o_hai_cham">Ngày vào ở:</string>
    <string name="so_dien_thoai_hai_cham">Số điện thoai:</string>
    <string name="tinh_trang_ho_so_hai_cham">Tình trạng hồ sơ:</string>
    <string name="gia_thue_phong_tang">Giá thuê phòng tăng</string>
    <string name="so_luong_nguoi_dang_o_tang">Số lượng người đang ở tăng</string>
    <string name="tim_kiem_phong_troo">Tìm kiếm phòng trọ</string>
    <string name="tim_kiem_phong_tro">Tìm kiếm phòng trọ</string>
    <string name="ten_phong">Tên phòng</string>
    <string name="khong">Không</string>
    <string name="co">Có</string>
    <string name="hang_thang">hàng tháng</string>
    <string name="ban_co_muon_xoa_khach">Bạn có muốn xóa vị khách này không?</string>
    <string name="xac_nhan_sua">Xác nhận sửa</string>
    <string name="ban_co_muon_luu_thong_tin_khach">Bạn có muốn lưu thông tin khách ?</string>
    <string name="ban_da_xoa_khach_thanh_cong">Bạn đã xóa khách thành công!</string>
    <string name="thao_tac_thanh_cong">Thao tác thành công!</string>
    <string name="Dong_close">Đóng</string>
    <string name="ban_da_cap_nhat_khach_thanh_cong">Bạn đã cập nhật khách thành công!</string>
    <string name="xoa_khach">Xóa khách</string>

    <string name="label_month">MONTH</string>
    <string name="label_year">YEAR</string>
    <string name="nhap_o_day_de_xoa">Nhấn ở đây để xóa !</string>
    <string name="chon_tat_ca">Chọn tất cả</string>
    <string name="quay_lai">Quay lại</string>

    <string name="Header_hop_dong">CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</string>
    <string name="Header_hop_dong_2">Độc lập - Tự do - Hạnh phúc</string>
    <string name="xem_chi_tiet_khach">Xem chi tiết khách</string>
    <string name="thong_tin_khach">Thông tin khách</string>
    <string name="ban_co_muon_xoa_vi_khach">Bạn có muốn xóa vị khách</string>
</resources>