<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="310dp"
    android:layout_height="330dp"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/bg_white_corner_16"
    android:elevation="10dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_title_dialog"
        style="@style/TEXT_MED_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_yellow_corner_16_top"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/bo_loc"
        android:textSize="20sp" />


    <androidx.appcompat.widget.AppCompatCheckBox
        style="@style/TEXT_LIGHT_2"
        android:id="@+id/cbx_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/da_thanh_toan"
        android:textSize="17sp"
        android:theme="@style/RadioButtonStyle" />

    <androidx.appcompat.widget.AppCompatCheckBox
        style="@style/TEXT_LIGHT_2"
        android:id="@+id/cbx_waiting_for_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/cho_thanh_toan"
        android:textSize="17sp"
        android:theme="@style/RadioButtonStyle" />

    <androidx.appcompat.widget.AppCompatCheckBox
        style="@style/TEXT_LIGHT_2"
        android:id="@+id/cbx_overdue_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/qua_han_thanh_toan"
        android:textSize="17sp"
        android:theme="@style/RadioButtonStyle" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbx_no_people_rent"
        style="@style/TEXT_LIGHT_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/khong_co_nguoi_thue"
        android:textSize="17sp"
        android:theme="@style/RadioButtonStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_button_cancel"
            style="@style/TEXT_MED_4"
            android:text="@string/huy"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:iconGravity="textStart" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/custom_button_clicked"
            style="@style/TEXT_MED_3"
            android:text="@string/ap_dung"
            android:textSize="16sp"
            app:backgroundTint="@color/colorButton"
            app:iconGravity="textStart" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </FrameLayout>

    </LinearLayout>


</LinearLayout>