<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="310dp"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/bg_white_corner_16"
    android:elevation="10dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_title_dialog"
        style="@style/TEXT_MED_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_yellow_corner_16_top"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/Sap_xep"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/radio_group_sort_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp">
        <RadioButton
            android:id="@+id/radio_btn_name_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_phong"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:fontFamily="@font/inter_light"
            android:theme="@style/RadioButtonStyle"/>

        <RadioButton
            android:id="@+id/radio_btn_number_people_living_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so_luong_nguoi_dang_o_tang"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:fontFamily="@font/inter_light"
            android:theme="@style/RadioButtonStyle"
            android:layout_marginTop="10dp"/>

        <RadioButton
            android:id="@+id/radio_btn_price_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gia_thue_phong_tang"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:fontFamily="@font/inter_light"
            android:theme="@style/RadioButtonStyle"
            android:layout_marginTop="10dp"
            />
    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_button_cancel"
            style="@style/TEXT_MED_4"
            android:text="@string/huy"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/custom_button_clicked"
            style="@style/TEXT_MED_3"
            android:text="@string/ap_dung"
            android:textSize="16sp"
            app:backgroundTint="@color/colorButton"
            app:iconGravity="textStart" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="-70dp"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>