<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_white_corner_16"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:elevation="10dp"
    android:layout_gravity="center">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:id="@+id/frm_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/background_dialog_delete"
                android:padding="10dp"
                android:scaleType="fitXY"
                app:riv_oval="true" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_delete_outline"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"/>


        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xac_nhan_xoa"
            style="@style/TEXT_BOLD"
            android:textSize="20sp"
            android:textColor="@color/colorTextBlack"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txt_confirm_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ban_co_muon_xoa_nha_tro"
            style="@style/TEXT_MED"
            android:textSize="15sp"
            android:textColor="@color/colorTextBlack"
            android:layout_gravity="center"
            android:gravity="center"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TEXT_MED_2"
                android:layout_gravity="start"
                android:text="@string/huy"
                android:textColor="@color/colorButton"
                app:iconGravity="textStart"
                android:textSize="16sp"
                app:backgroundTint="@null"
                android:background="@drawable/custom_button_cancel"
                android:layout_marginEnd="20dp"
                />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete_home"
                style="@style/TEXT_MED_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/custom_button_clicked"
                android:text="@string/xac_nhan"
                android:textSize="16sp"
                app:backgroundTint="@color/colorButton"
                app:iconGravity="textStart" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>